--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/router": "^10.1.1",
     "@prisma/client": "^3.13.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
